--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     
     <meta name="description" content="前端资源汇集">
     
-    <link rel="preload" href="/awesome/assets/css/0.styles.18e3f698.css" as="style"><link rel="preload" href="/awesome/assets/js/app.b177f780.js" as="script"><link rel="preload" href="/awesome/assets/js/6.c759202e.js" as="script"><link rel="prefetch" href="/awesome/assets/js/10.d2ed1e11.js"><link rel="prefetch" href="/awesome/assets/js/11.66890cea.js"><link rel="prefetch" href="/awesome/assets/js/12.1945f575.js"><link rel="prefetch" href="/awesome/assets/js/13.c477ae28.js"><link rel="prefetch" href="/awesome/assets/js/14.6a62fb55.js"><link rel="prefetch" href="/awesome/assets/js/2.505207ad.js"><link rel="prefetch" href="/awesome/assets/js/3.75beeeb8.js"><link rel="prefetch" href="/awesome/assets/js/4.001ffe52.js"><link rel="prefetch" href="/awesome/assets/js/5.4c0c7424.js"><link rel="prefetch" href="/awesome/assets/js/7.13cecb51.js"><link rel="prefetch" href="/awesome/assets/js/8.9b12cd81.js"><link rel="prefetch" href="/awesome/assets/js/9.c152e4d0.js">
+    <link rel="preload" href="/awesome/assets/css/0.styles.18e3f698.css" as="style"><link rel="preload" href="/awesome/assets/js/app.aa857189.js" as="script"><link rel="preload" href="/awesome/assets/js/6.c759202e.js" as="script"><link rel="prefetch" href="/awesome/assets/js/10.faa1421a.js"><link rel="prefetch" href="/awesome/assets/js/11.457bd498.js"><link rel="prefetch" href="/awesome/assets/js/12.1945f575.js"><link rel="prefetch" href="/awesome/assets/js/13.c477ae28.js"><link rel="prefetch" href="/awesome/assets/js/14.6a62fb55.js"><link rel="prefetch" href="/awesome/assets/js/2.505207ad.js"><link rel="prefetch" href="/awesome/assets/js/3.75beeeb8.js"><link rel="prefetch" href="/awesome/assets/js/4.001ffe52.js"><link rel="prefetch" href="/awesome/assets/js/5.4c0c7424.js"><link rel="prefetch" href="/awesome/assets/js/7.88e526b8.js"><link rel="prefetch" href="/awesome/assets/js/8.9b12cd81.js"><link rel="prefetch" href="/awesome/assets/js/9.9b4c7ac5.js">
     <link rel="stylesheet" href="/awesome/assets/css/0.styles.18e3f698.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/awesome/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/awesome/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/awesome/assets/js/app.b177f780.js" defer></script><script src="/awesome/assets/js/6.c759202e.js" defer></script>
+    <script src="/awesome/assets/js/app.aa857189.js" defer></script><script src="/awesome/assets/js/6.c759202e.js" defer></script>
   </body>
 </html>
